--- a/src/compiled/css/index.css
+++ b/src/compiled/css/index.css
@@ -299,6 +299,16 @@ header {
   height: calc(100vh - var(--sp-7) - var(--sp-7));
   text-align: center;
 }
+@media screen and (max-width: 979px) {
+  header {
+    position: relative;
+    top: var(--sp-0);
+    height: auto;
+    flex: 1 0 100%;
+    justify-content: flex-start;
+    gap: var(--sp-6);
+  }
+}
 header > div {
   width: 100%;
 }
@@ -524,6 +534,7 @@ main .projects > li {
   align-items: flex-start;
   flex-wrap: nowrap;
   gap: var(--sp-3);
+  background: rgba(var(--offer-card-background-rgb), 0.25);
   border: 1px solid rgba(141, 149, 184, 0.2);
   border-radius: var(--sp-1);
   margin-bottom: var(--sp-2);
@@ -532,6 +543,7 @@ main .projects > li {
   text-align: left;
   text-decoration: none;
   transition: all 0.3s ease;
+  backdrop-filter: blur(10px);
 }
 main .projects > li .tags {
   margin: var(--sp-0);
@@ -565,11 +577,21 @@ main .projects > li .project-content {
   flex-wrap: nowrap;
   gap: var(--sp-4);
 }
+@media screen and (max-width: 979px) {
+  main .projects > li .project-content {
+    flex-wrap: wrap;
+  }
+}
 main .projects > li .project-content > div:first-child {
   flex: 0 0 200px;
   text-align: center;
   user-select: none;
   pointer-events: none;
+}
+@media screen and (max-width: 979px) {
+  main .projects > li .project-content > div:first-child {
+    flex: 1 0 100%;
+  }
 }
 main .projects > li .project-content > div:first-child img {
   max-width: 200px;
@@ -577,6 +599,11 @@ main .projects > li .project-content > div:first-child img {
   object-fit: cover;
   margin: var(--sp-0) auto;
   border-radius: var(--sp-1);
+}
+@media screen and (max-width: 979px) {
+  main .projects > li .project-content > div:first-child img {
+    max-width: 100%;
+  }
 }
 main .projects > li .project-content > div:first-child svg {
   color: var(--light-color);
@@ -649,10 +676,14 @@ main .projects > li .links li a:hover {
   flex-wrap: nowrap;
   gap: var(--sp-1);
   margin: var(--sp-0);
-  padding: var(--sp-0);
-  list-style: none;
   padding: var(--sp-1);
+  list-style: none;
   z-index: 100;
+}
+@media screen and (max-width: 979px) {
+  .nav {
+    width: 90%;
+  }
 }
 .nav li a {
   display: block;
@@ -663,6 +694,11 @@ main .projects > li .links li a:hover {
   border-radius: var(--sp-10);
   padding: var(--sp-1) var(--sp-3);
   transition: all 0.2s linear;
+}
+@media screen and (max-width: 979px) {
+  .nav li a {
+    font-size: var(--font-size-base);
+  }
 }
 .nav li a svg {
   vertical-align: middle;
@@ -694,6 +730,14 @@ main .projects > li .links li a:hover {
   align-items: flex-start;
   flex-wrap: nowrap;
   gap: var(--sp-10);
+}
+@media screen and (max-width: 979px) {
+  .container {
+    max-width: 100%;
+    min-width: 100%;
+    padding: var(--sp-4) var(--sp-2);
+    flex-wrap: wrap;
+  }
 }
 .container::after, .container::before {
   content: "";
