--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -20,6 +20,13 @@
 	padding: var(--sp-8) var(--sp-9);
 	@include mx.flex($align: flex-start, $gap: var(--sp-10));
 
+	@include bp.respond-to('tablet') {
+		max-width: 100%;
+		min-width: 100%;
+		padding: var(--sp-4) var(--sp-2);
+		flex-wrap: wrap;
+	}
+
 	&::after,
 	&::before {
 		content: '';
