--- a/src/style/base/__reset.scss
+++ b/src/style/base/__reset.scss
@@ -50,6 +50,7 @@ body {
 	font-size: var(--font-size-base);
 	overflow-wrap: break-word;
 	margin: 0;
+	transition: background-color 0.2s linear;
 }
 
 h1,
