--- a/src/style/home/__home.scss
+++ b/src/style/home/__home.scss
@@ -442,3 +442,25 @@ main {
 	z-index: 200 !important;
 	pointer-events: none;
 }
+
+[data-theme="light"] {
+	header {
+		.logo {
+			filter: invert(0.8);
+		}
+	}
+
+	main {
+		.projects {
+			&>li {
+				.links li {
+					a {
+						&.buy {
+							color: rgba(var(--primary-color-rgb), 1)
+						}
+					}
+				}
+			}
+		}
+	}
+}
